fix overflow

--- a/src/component/General/Footer/Footer.scss
+++ b/src/component/General/Footer/Footer.scss
@@ -6,5 +6,5 @@ footer {
   font-size: .75rem;
   font-weight: bold;
   color: gray;
-  margin: 1rem;
+  margin: 1rem 0;
 }
